# 2.fastapi-gitops

./: .gitignore  .pre-commit-config.yaml  custom-values.yaml  pyproject.toml  report.md
.github/workflows/: ci-cd.yml
app/: main.py
tests/: test_main.py
